# daily-ai

./: .gitignore  AGENTS.md  Cargo.toml  example.json
.cargo/: config.toml
.serena/: project.yml
.serena/memories/: optimization_plan.md
crates/dirs/: Cargo.toml
crates/dirs/src/: lib.rs
crates/include-zstd/: Cargo.toml
crates/include-zstd/src/: lib.rs
crates/local-embedder/: Cargo.toml
crates/local-embedder/src/: lib.rs
src/: ai.rs  classify.rs  cli.rs  context.rs  dirs.rs  error.rs  io_utils.rs  logging.rs  main.rs  safari.rs  serde_helpers.rs  shell.rs  time_utils.rs
src/ai/: agent.rs  cleaner_repro.rs  commit_message.rs  commit_message_prompt.txt  label_urls.rs  label_urls_prompt.txt  mod.rs  prompt.rs  query.rs  summary.rs  summary_prompt.txt  tools.rs
src/ai/full_summary/: common_groups_prompt.txt  highlights_prompt.txt  repo_summaries_prompt.md  repo_summaries_prompt.txt  shell_overview_prompt.txt  summary_prompt.md  summary_prompt.txt  time_breakdown_prompt.md  time_breakdown_prompt.txt
src/ai/prompts/: commit_message_prompt.md  label_urls_prompt.md
src/ai/prompts/full_summary/: common_groups_prompt.md  highlights_prompt.md  repo_summaries_prompt.md  shell_overview_prompt.md  summary_prompt.md  time_breakdown_prompt.md
src/ai/tools/: commit.rs  fetch.rs  mod.rs  summary.rs
src/classify/: bert.rs  convert.rs  linalg.rs  mod.rs  openai.rs  pca.rs  traits.rs
src/classify/knn/: lloyd.rs  mod.rs  utils.rs
src/entity/: history_client_versions.rs  history_event_listeners.rs  history_events.rs  history_items.rs  history_items_to_tags.rs  history_tags.rs  history_tombstones.rs  history_visits.rs  mod.rs
src/git/: diff.rs  hist.rs  mod.rs
