[package]
name = "daily-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4.42", features = ["now", "std", "alloc", "clock"] }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "io-util",
] }
git2 = "0.20.2"
async-openai = { path = "../../PRs/async-openai/async-openai" }
# async-openai = "0.31.0-alpha.11"
schemars = "1.1.0"
tracing = { version = "0.1.41", features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "local-time",
] }
tracing-indicatif = "0.3.13"
tracing-unwrap = { version = "1.0.1", features = ["log-location"] }
serde_path_to_error = "0.1.20"
# reqwest = "0.12.24"

# [patch.crates-io]
# async-openai = { git = "https://github.com/annie444/async-openai.git", branch = "main" }
