[package]
name = "daily-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
clap = { version = "4.5.53", features = ["derive", "color"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "io-util",
] }
git2 = "0.20.2"
async-openai = { path = "../../PRs/async-openai/async-openai" }
# async-openai = "0.31.0-alpha.11"
schemars = "1.1.0"
tracing = { version = "0.1.41", features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "local-time",
] }
tracing-indicatif = "0.3.13"
tracing-unwrap = { version = "1.0.1", features = ["log-location"] }
serde_path_to_error = "0.1.20"
atuin-client = "18.10.0"
atuin-history = "18.10.0"
candle-core = "0.9.1"
candle-nn = "0.9.1"
tokenizers = { version = "0.22.1", features = ["rustls-tls"] }
time = { version = "0.3.44", features = [
  "serde-human-readable",
  "macros",
  "local-offset",
  "formatting",
  "parsing",
] }
candle-transformers = "0.9.1"
futures = "0.3.31"
ndarray = "0.16.1"
linfa = { version = "0.8.0" }
linfa-clustering = { version = "0.8.0" }
linfa-reduction = { version = "0.8.0" }
safetensors = "0.7.0"
reqwest = { version = "0.12.24", default-features = false, features = [
  "charset",
  "http2",
  "system-proxy",
  "rustls-tls",
  "stream",
] }
atuin-common = "18.10.0"
atuin-kv = "18.10.0"
atuin-scripts = "18.10.0"
atuin-dotfiles = "18.10.0"
html2md = "0.2.15"
clap_complete = "4.5.61"
clap_complete_nushell = "4.5.10"
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = { version = "0.9.1", features = ["metal"] }

# [patch.crates-io]
# async-openai = { git = "https://github.com/annie444/async-openai.git", branch = "main" }
