[package]
name = "daily-ai"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/local-embedder", "crates/dirs", "crates/include-zstd"]

[features]
default = []
local-ml = ["dep:daily-ai-local-embedder"]

[dependencies]
daily-ai-local-embedder = { path = "crates/local-embedder", optional = true }
daily-ai-dirs = { path = "crates/dirs" }
daily-ai-include-zstd = { path = "crates/include-zstd" }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "time",
] }
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "io-util",
] }
git2 = "0.20"
async-openai = "0.31.0-alpha.11"
schemars = "1"
tracing = { version = "0.1", features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "local-time",
] }
tracing-indicatif = "0.3"
serde_path_to_error = "0.1"
atuin-client = "18.10"
atuin-history = "18.10"
time = { version = "0.3", features = [
  "serde-human-readable",
  "macros",
  "local-offset",
  "formatting",
  "parsing",
] }
futures = "0.3"
ndarray = "0.17"
reqwest = { version = "0.12", default-features = false, features = [
  "charset",
  "http2",
  "system-proxy",
  "rustls-tls",
  "stream",
] }
atuin-common = "18"
atuin-kv = "18"
atuin-scripts = "18"
atuin-dotfiles = "18"
html2md = "0.2"
clap_complete = "4"
clap_complete_nushell = "4"
clap-verbosity-flag = { version = "3", default-features = false, features = [
  "tracing",
] }
humantime = "2"
ndarray-linalg = { version = "0.18", features = ["openblas-system"] }
hdbscan = "0.12"
ndarray-rand = "0.16"
murmur3 = "0.5"
bincode = "2"
zstd = { version = "0.13", default-features = false, features = [
  "fat-lto",
  "zdict_builder",
  "arrays",
] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = { version = "0.9.1", features = ["metal"] }

[patch.crates-io]
async-openai = { git = "https://github.com/annie444/async-openai.git", branch = "main" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
